@@ -20,4 +20,15 @@
 bin_PROGRAMS = vgrabbj
 vgrabbj_SOURCES = vgrabbj.c v_config.c font.c ccvt_c.c vgrabbj.h ccvt.h v_ftp.c ftplib.c
 
-EXTRA_DIST = reconf vgrabbj.conf
+sysconf_DATA = vgrabbj.conf.default
+EXTRA_DIST = vgrabbj.conf.default
+
+DEFAULT_CONFIG_FILE = $(sysconfdir)/vgrabbj.conf
+
+install-data-local: install-sysconfDATA
+	@if test -f $(DESTDIR)$(sysconfdir)/vgrabbj.conf ; then \
+	        echo "$@ will not overwrite existing $(DESTDIR)$(sysconfdir)/vgrabbj.conf" ; \
+	else \
+	        echo "$(INSTALL_DATA) $(srcdir)/vgrabbj.conf.default $(DESTDIR)$(sysconfdir)/vgrabbj.conf" ;\
+	        $(INSTALL_DATA) $(srcdir)/vgrabbj.conf.default $(DESTDIR)$(sysconfdir)/vgrabbj.conf; \
+	fi
