@@ -1,0 +1,2 @@
+/* Define where the config file is */
+#undef SYSCONF_DIR
