@@ -1,26 +1,136 @@
 Brightness 	Off
-DebugLevel	7
-ImageQuality 	100
+;	Brightness adjustment to be performed by vgrabbj, default Off
+;	if set to off, image from cam is taken without adjustment
+DebugLevel	4
+;	Valid Debuglevels are between 0 and 7, with 7 babbling all the time,
+;	0 saying nothing; defaults to 4
+ImageQuality 	75
+;	Quality setting for jpeg image; default 75
 SetImageSize	Off
-ImageSize	sif
+;	To turn off imagesize setting of vgrabbj, needed for some webcams
+; 	default Off
+ImageSize	cif
+;	Imagesize can be sqcif|qsif|qcif|sif|cif|vga|svga|xga|sxga|uxga;
+;	default cif, being:
+;	sqcif	128x96
+;       qsif	160x120
+;	qcif	176x144
+;	sif	320x240
+;	cif	352x288
+;	vga	640x480
+;	svga	800x600
+;	xga	1024x768
+;	sxga	1280x1024
+;	uxga	1600x1200
+; ImageWidth    640
+; ImageHeight   480
+;	BE CAREFUL! These values are not checked if valid!
+;	They supersede any ImageSize defined in here, only
+;	commandline arguments have higher priority; no defaults
 SwitchColor	Off
+;	If your output has red and green swapped, turn this switch
+;	it swaps red and green; default: Off
 ;ForcePalette	0
-;   Imagesize can be sqcif|qsif|qcif|sif|cif|vga
+;	Force vgrabbj to use the specified palette; if that one is
+;	not supported by your driver, vgrabbj falls back to a
+;	supported one, therefor its just the first "try" on the device
+;	default order is: RGB24, RGB32, YUYV (which is here equal to YUV422),
+;	YUV420, YUV420P
+;
+;	Being (from /usr/include/linux/videodev.h):
+;	1	VIDEO_PALETTE_GREY				not supported
+;	2	VIDEO_PALETTE_HI240				not supported
+;	3	VIDEO_PALETTE_RGB565				not supported
+;	4	VIDEO_PALETTE_RGB24
+;	5	VIDEO_PALETTE_RGB32
+;	6	VIDEO_PALETTE_RGB555				not supported
+;	7	VIDEO_PALETTE_YUV422, VIDEO_PALETTE_COMPONENT
+;	8	VIDEO_PALETTE_YUYV
+;	9	VIDEO_PALETTE_UYV				not supported	
+;	10	VIDEO_PALETTE_YUV420
+;	11	VIDEO_PALETTE_YUV411				not supported
+;	12	VIDEO_PALETTE_RAW				not supported
+;	13	VIDEO_PALETTE_YUV422P, VIDEO_PALETTE_PLANAR	not supported
+;	14	VIDEO_PALETTE_YUV411P				not supported
+;	15	VIDEO_PALETTE_YUV420P
+;	16	VIDEO_PALETTE_YUV410P				not supported
 OutputFormat	jpg
+;	Options are jpg or png
 OutputFile	/share/t.jpg
+;	Where to write the grabbed image. This file must be read/writeable by
+;	the user running vgrabbj
 VideoDevice	/dev/video
+;	Where to get the data from. This device must be read/writeable by the
+;	user running vgrabbj
+OpenOnce	Off
+;	OpenOnce set to on lets vgrabbj open the VideoDevice only once after
+;	all configuration is checked and closes it only when it ends. Hence,
+;	it is a useful option in daemon mode only, if you suspect the 
+;	open/close calls on VideoDevice for each image to be a problem with
+;	your driver. Be aware, that no other application can use VideoDevice
+;	even while vgrabbj sits idling, waiting it defined sleeptime.
+;	Default: Off
 Daemon		0
-UseTimeStamp	On
+;	Use vgrabbj in daemon mode, set the sleeptime in microseconds
+;	1000000 equals a waiting time of 1 second (!). Daemon 0 (zero) means
+;	that daemon mode is disabled (default). With 1 (one) as the smallest
+;	value to enable daemon operation, you should be aware that this means
+;	you box is under constant load from vgrabbj and the file might not be
+;	readable by any other app because it's constantly rewritten!
+;	If not set, daemon mode is not enabled (default)
+;
+;	Timestamping of the image
+UseTimeStamp	Off
+;	Timestamp the image with a defineable string, default: Off
+;	The handling between commandline and configfile is currently different!
+;	In the configfile you HAVE TO set this option to On if you want the
+;	string in the image. On the commandline, ANY option related to the
+;	timestamp feature set on the commandline enables it! So you can safely
+;	set all other timestamp values
 FontFile	/usr/share/fonts/truetype/Arialn.ttf
+;	Font to be used for timestamping the image
+;	default: /usr/share/fonts/truetype/Arialn.ttf
 TimeStamp	"%A, %e. %B %Y - %T"
+;	String to be put in the image
+;	default: "%a, %e. %B %Y - %T", see man 3 strftime for details
+;	being: <short weekday>, <day of month without leading 0>. <month name>
+;	<four digit year> - <time in 24h notation>
 FontSize	12
-Position	upperleft
-Blend		50
+;	Fontsize for the string to be put in the image
+;	Values may range between 3 and 100, default: 12
+Position	upperright
+;	Where to put the string in the image. Default: upperright, possible:
+;	upperleft	or	UL
+;	lowerleft	or	LL
+;	uppercenter	or	UC
+;	lowercenter	or	LC
+;	upperright	or	UR
+;	lowerright	or	LR
+Blend		60
+;	How much of the original picture shall be viewable behind
+;	the string? 1 = no string, 100 = no image
 BorderSize	2
-;EnableFtp	No
-;RemoteHost	ftp.foo.bar
-;RemoteDir	/
-;RemoteImageName	camimage.jpg
-;Username	foo
-;Password	bar
-;TryHarder	2
+;	Pixels to border the string (being blended), values may range between
+;	1 and 255, default 2
+;
+;	FTP-settings
+EnableFtp	No
+;	Do the ftp? ftp is not available on the commandline for one simple
+;	reason: if all values were given on the commandline, the password
+;	would also be on the commandline, hence every user (!!) on that
+;	box could see the password via `ps a`. That's not what we want,
+;	therefore, everything has to be done via the config-file.
+RemoteHost	ftp.foo.bar
+;	What's the address of the ftp host (name or ip address)
+RemoteDir	/
+;	Where on the remote box to put the image
+RemoteImageName	camimage.jpg
+;	Name of the image on the remote box
+Username	foo
+;	Username to log into the remote box
+Password	bar
+;	Password to log into the remote box (WARNING: cleartext transmission!
+;	NO protection against sniffers!!!!)
+TryHarder	2
+;	If the remote box is not as helpful as expected, possible:
+;	not implemented, yet
